Prevent bouncing body on iOS

--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ html {
 
 html, body {
     overflow: hidden;
+    position: fixed;
     margin: 0;
     height: 100%;
 }
